# AndroidOCR

./: README.md
TessLeptWapper/: Makefile  Makefile.in  autogen.sh  config.status  configure  configure.ac  libtool
TessLeptWapper/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
TessLeptWapper/src/: Makefile  Makefile.am  Makefile.in  OCRHandler.cpp  OCRHandler.h  TessLeptWapper.cpp  TessLeptWapper.h
TessLeptWapper/src/.deps/: JNIDemo1Cpp.Plo  LinkC.Plo  OCRHandler.Plo  TessLeptWapper.Plo  basetesseract.Plo  utility.Plo
TessOCRWebServices/: TessLeptWapper.h  build.xml
TessOCRWebServices/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml  rest-build.xml
TessOCRWebServices/nbproject/private/: private.properties
TessOCRWebServices/src/java/enginewapper/: TessLeptWapper.java
TessOCRWebServices/src/java/ocrws/: MessageTypes.java  OcrHpcc.java
TessOCRWebServices/src/java/postprocessing/: EngPP.java  IPostProcessor.java  ISO639.java  Processor.java  ProcessorFactory.java  StringUtils.java  TextUtilities.java  ViePP.java
TessOCRWebServices/src/java/preprocessing/: AbsImagePreprocessing.java  ImageHelper.java  ImagePreprocessing.java  ImageProcessingTest.java
TessOCRWebServices/web/WEB-INF/: web.xml
android/: .project  AndroidManifest.xml  build.xml  project.properties
android/proguard/: seeds.txt  usage.txt
android/res/drawable/: getimg_button.xml
android/res/layout/: capture.xml  imageview.xml  result.xml
android/res/values/: arrays.xml  attrs.xml  colors.xml  ids.xml  strings.xml
android/res/xml/: preferences.xml
android/src/hpcc/hut/edu/vn/ocr/: CaptureActivity.java  CaptureActivityHandler.java  Database.java  DecodeHandler.java  DecodeThread.java  ImageViewerActivity.java  OcrCharacterHelper.java  OcrInitAsyncTask.java  OcrRecognizeAsyncTask.java  OcrResult.java  PlanarYUVLuminanceSource.java  PreferencesActivity.java  ResultActivity.java  ViewfinderView.java
android/src/hpcc/hut/edu/vn/ocr/camera/: AutoFocusManager.java  CameraConfigurationManager.java  CameraManager.java  GetImageButton.java  PreviewCallback.java  ShutterButton.java
android/src/hpcc/hut/edu/vn/ocr/imageprocessing/: CropOption.java  CropOptionAdapter.java  ImageProcessing.java  JpegImage.java
android/src/hpcc/hut/edu/vn/ocr/language/: LanguageCodeHelper.java  TranslateBingAsyncTask.java
android/src/hpcc/hut/edu/vn/ocr/ocrserviceconnector/: HpccOcrServiceConnector.java  MessageTypes.java
android/src/hpcc/hut/edu/vn/ocr/sensor/: SensorService.java
tess-two/: local.properties
